[gd_scene load_steps=2 format=3 uid="uid://dxm7k3qp5yhbn"]

[ext_resource type="Script" path="res://scripts/debug/debug_menu.gd" id="1_debug"]

[node name="DebugMenu" type="ConfirmationDialog"]
title = "üõ†Ô∏è QA Debug Menu"
initial_position = 2
size = Vector2i(700, 650)
ok_button_text = "Apply Changes"
dialog_text = "Change tier and reset account for testing"
script = ExtResource("1_debug")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 692.0
offset_bottom = 601.0

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TierLabel" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Select Tier:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TierButtonsContainer" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Separator1" type="HSeparator" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ResetOptionsContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 10

[node name="Separator2" type="HSeparator" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VisualRegressionContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 10

[node name="Separator3" type="HSeparator" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Status will appear here..."
horizontal_alignment = 1
autowrap_mode = 3
